src/objects/X15_Year_Capital_Expenditure__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deficiency_Description__c</fullName>
        <label>Deficiency Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Immediate__c</fullName>
        <label>Immediate</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Project__c</fullName>
        <label>Loan Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipName>Reserve_Expenditures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Surveyed_Area__c</fullName>
        <label>Surveyed Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Immediate__c + Year_0_5__c + Year_11_15__c + Year_6_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_0_5__c</fullName>
        <label>Year 0 - 5</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_11_15__c</fullName>
        <label>Year 11 - 15</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_6_10__c</fullName>
        <label>Year 6 - 10</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>15 Year Capital Expenditure</label>
    <nameField>
        <displayFormat>ResExp-{00000}</displayFormat>
        <label>Reserve Expenditures Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>15 Year Capital Expenditures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>